--- a/index.html
+++ b/index.html
@@ -3,36 +3,50 @@
   <head>
     <title>Jonas Salk</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Hind+Madurai|Raleway" rel="stylesheet">
+
   <body>
     <header class="main-header">
       <h1 class="site-title">Jonas Salk</h1>
     </header>
     <main>
+
       <section id="intro" class="row">
-<p>“There is hope in dreams, imagination, and in the courage
-of those who wish to make those dreams a reality.”</p>
-      </section><!--end #intro-->
+<p>American medical researcher and virologist who discovered and developed one of the first successful polio vaccines.
+  </p>
+      </section>
+     <section id="imagelarge" class="row">
+        <p></p>
+      </section>
 
       <section id="timeline" class="row">
-        <h1>Learn More</h1>
+        <h1>Timeline</h1> <br><br>
         <ul>
-            <li> 1914 Salk was born in New York City. </li>
-            <li> 1939 Salk became a scientist physician at Mount Sinai Hospital. </li>
-            <li> 1942 Salk went to the University of Michigan on a research fellowship to develop an influenza vaccine. </li>
-            <li> 1947 Salk was appointed director of the Virus Research Laboratory at the University of Pittsburgh School of Medicine. </li>
-            <li> 1954 National testing of Salk's vaccine began on one million children, ages six to nine, who became known as the Polio Pioneers. </li>
-            <li> 1955 That vaccine was announced safe and effective. </li>
-            <li> 1962 Polio cases dropped from 45,000 to 910. </li>
-            <li> 1963 Salk Institute for Biological Studies in La Jolla was founded. </li>
-            <li> 1995 Salk passed away at the age of 80 </li>
+            <li> 1914 Born in New York City. </li><br>
+            <li> 1939 Became a scientist physician at Mount Sinai Hospital. </li><br>
+            <li> 1942 Went to the University of Michigan on a research fellowship to develop an influenza vaccine. </li><br>
+            <li> 1947 Was appointed director of the Virus Research Laboratory at the University of Pittsburgh School of Medicine. </li><br>
+            <li> 1954 National testing of Salk's vaccine began on one million children, ages six to nine, who became known as the Polio Pioneers. </li><br>
+            <li> 1955 That vaccine was announced safe and effective. </li><br>
+            <li> 1962 Polio cases dropped from 45,000 to 910. </li><br>
+            <li> 1963 Salk Institute for Biological Studies in La Jolla was founded. </li><br>
+            <li> 1995 Passed away at the age of 80 </li>
         </ul>
       </section><!--end #timeline-->
 
+
       <section id="gallery" class="row">
-          <h2>Logo Decks</h2>
-          <img src="pix/deck1.png" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+          <h2></h2>
+            <img src="pics/jonas2.jpg" />
+          <br><br>  <p>You don't need a science degree to make a huge difference at Salk.</p><p> Every cure begins with you.</p>
+          <br>  <a href="https://donatenow.networkforgood.org/salkinstitute"> Donate Now </a>
+          <p></p>
       </section><!--end #gallery-->
+
+      <section id="end" class="row">
+<p> There is hope in dreams, imagination, and in the courage
+of those who wish to make those dreams a reality. </p>
+      </section><!--end #end-->
 
       <footer>
         <div class="copyright">
