--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
           <h2></h2>
             <img src="pics/jonas2.jpg" />
           <br><br>  <p>You don't need a science degree to make a huge difference at Salk.</p><p> Every cure begins with you.</p>
-          <br>  <a href="https://donatenow.networkforgood.org/salkinstitute"> Donate Now </a>
+          <br>  <a href="https://donatenow.networkforgood.org/salkinstitute">Donate Now</a>
+          <br><br> <a href="http://www.biography.com/people/jonas-salk-9470147#polio-vaccine">Learn More</a>
           <p></p>
       </section><!--end #gallery-->
 
